--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
     "undici": "^5.11.0"
+    ,
+    "better-sqlite3": "^9.4.0",
+    "nodemailer": "^6.9.3"
   },
   "engines": {
     "node": "16.x"
