--- a/workers/imap-poller/Dockerfile
+++ b/workers/imap-poller/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-slim
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --omit=dev
+RUN npm install --omit=dev --legacy-peer-deps
 COPY . .
 CMD ["node", "index.js"]
